# serif-health-takehome

./: README.md  README_ORIGINAL.md  SOLUTION.txt  check_work.py  main.py  pyproject.toml  requirements.txt  research.md
data/: ein_45-2320063_in_network_html.html  in_network_files.parquet
notebooks/: Explore In Network Files.ipynb  Explore Reporting Plans.ipynb
